src/test/deca/context/invalid/Objet/BadTypeCall.deca
// Description:
//      assigning the result of a function call to a different type
//
// Results:
//      Line 19 : Rule (3.28) Impossible type assignment
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    int foo() {
        return 1;
    }
}

{
    A a = new A();
    boolean x = a.foo();
}